--- a/Final/html/login.html
+++ b/Final/html/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login_Logout</title>
-    <link rel="stylesheet" href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\css\styles.css">
+    <link rel="stylesheet" href="/Final/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         html,
@@ -118,22 +118,23 @@
     <nav class="navbar">
         <div class="container">
             <div class="logo">
-                <img src="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\logo.png" alt="Logo" style="height: 50px; vertical-align: middle;">
+                <img src="/Final/logo.png" alt="Logo" style="height: 50px; vertical-align: middle;">
                 Ideas in Motion</div>
                 <ul class="nav-links">
-                    <li><a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\index.html" >Home</a></li>
+                    <li><a href="/Final/html/index.html" >Home</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropbtn">Projects</a>
                         <div class="dropdown-content">
-                            <a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\article1.html">Article 1</a>
-                            <a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\article2.html">Article 2</a>
-                            <a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\article3.html">Article 3</a>
-                            <a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\mp3.html">Music Player</a>
+                            <a href="/Final/html/article1.html">Article 1</a>
+                            <a href="/Final/html/article2.html">Article 2</a>
+                            <a href="/Final/html/article3.html">Article 3</a>
+                            <a href="/Final/html/mp3.html">Music Player</a>
+                            <a href="/Final/html/story.html">Story of my Life</a>
                         </div>
                     </li>
-                    <li><a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\about.html">About</a></li>
-                    <li><a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\contact.html">Contact Us</a></li>
-                    <li><a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\login.html" class="active">Login</a></li>
+                    <li><a href="/Final/html/about.html">About</a></li>
+                    <li><a href="/Final/html/contact.html">Contact Us</a></li>
+                    <li><a href="/Final/html/login.html" class="active">Login</a></li>
                 </ul>
             </div>
         </nav>
