--- a/Final/html/article2.html
+++ b/Final/html/article2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Final</title>
-    <link rel="stylesheet" href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\css\styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -12,26 +12,27 @@
     <nav class="navbar">
         <div class="container">
             <div class="logo">
-                <img src="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\logo.png" alt="Logo" style="height: 50px; vertical-align: middle;">
-                Ideas in Motion</div>
-                <ul class="nav-links">
-                    <li><a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\index.html" >Home</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropbtn">Projects</a>
-                        <div class="dropdown-content">
-                            <a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\article1.html">Article 1</a>
-                            <a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\article2.html" class="active">Article 2</a>
-                            <a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\article3.html">Article 3</a>
-                            <a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\mp3.html">Music Player</a>
-                        </div>
-                    </li>
-                    <li><a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\about.html">About</a></li>
-                    <li><a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\contact.html">Contact Us</a></li>
-                    <li><a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\login.html">Login</a></li>
-                </ul>
+                <img src="../logo.png" alt="Logo" style="height: 50px; vertical-align: middle;">
+                Ideas in Motion
             </div>
-        </nav>
-    
+            <ul class="nav-links">
+                <li><a href="../html/index.html">Home</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">Projects</a>
+                    <div class="dropdown-content">
+                        <a href="../html/article1.html">Article 1</a>
+                        <a href="../html/article2.html" class="active">Article 2</a>
+                        <a href="../html/article3.html">Article 3</a>
+                        <a href="../html/mp3.html">Music Player</a>
+                        <a href="/Final/html/story.html">Story of my Life</a>
+                    </div>
+                </li>
+                <li><a href="../html/about.html">About</a></li>
+                <li><a href="../html/contact.html">Contact Us</a></li>
+                <li><a href="../html/login.html">Login</a></li>
+            </ul>
+        </div>
+    </nav>
 
     <!-- Header -->
     <header class="header">
@@ -48,41 +49,41 @@
 
         <h3>1. Best Supercars</h3>
         <p>The lightning-fast reflexes and sleek design of this feline marvel resemble the Bugatti Chiron, racing ahead with unparalleled speed and elegance. Truly a predator on the asphalt!</p>
-        <img src="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\images2\images (5).jpeg" alt="Blog Post Image">
+        <img src="../images2/images (5).jpeg" alt="Supercar Image">
         <div class="separator"></div>
 
         <h3>2. Hall of Fame</h3>
         <div class="gallery-container">
             <div class="image-item">
-                <img src="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\images2\huh-cat.jpg" alt="Bugatti Chicharon">
+                <img src="../images2/huh-cat.jpg" alt="Bugatti Chicharon">
                 <div class="image-caption">
                     <h4>Bugatti Chicharon</h4>
                     <p>A feline masterpiece boasting 1,500 hp and unmatched confusion.</p>
                 </div>
             </div>
             <div class="image-item">
-                <img src="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\images2\olli-the-polite-cat.jpg" alt="Ferrari LaBeluga">
+                <img src="../images2/olli-the-polite-cat.jpg" alt="Ferrari LaBeluga">
                 <div class="image-caption">
                     <h4>Ferrari LaBeluga</h4>
                     <p>The politest hybrid supercar, combining power with courtesy.</p>
                 </div>
             </div>
             <div class="image-item">
-                <img src="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\images2\side-eye-cat.jpg" alt="Lamborghini Huracán">
+                <img src="../images2/side-eye-cat.jpg" alt="Lamborghini Huracán">
                 <div class="image-caption">
                     <h4>Lamborghini Huracán</h4>
                     <p>Side-eyeing the competition with its V10 ferocity.</p>
                 </div>
             </div>
             <div class="image-item">
-                <img src="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\images2\Untitled-design.png" alt="Porsche 911 Turbo S">
+                <img src="../images2/Untitled-design.png" alt="Porsche 911 Turbo S">
                 <div class="image-caption">
                     <h4>Porsche 911 Turbo S</h4>
                     <p>A mysterious yet iconic force on the road.</p>
                 </div>
             </div>
             <div class="image-item">
-                <img src="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\images2\images (4).jpeg" alt="McLaren P1">
+                <img src="../images2/images (4).jpeg" alt="McLaren P1">
                 <div class="image-caption">
                     <h4>McLaren P1</h4>
                     <p>Blending elegance and performance for a purr-fect drive.</p>
