--- a/Final/html/article3.html
+++ b/Final/html/article3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Final</title>
-    <link rel="stylesheet" href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\css\styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -12,27 +12,27 @@
     <nav class="navbar">
         <div class="container">
             <div class="logo">
-                <img src="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\logo.png" alt="Logo" style="height: 50px; vertical-align: middle;">
-                Ideas in Motion</div>
-                <ul class="nav-links">
-                    <li><a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\index.html" >Home</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropbtn">Projects</a>
-                        <div class="dropdown-content">
-                            <a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\article1.html">Article 1</a>
-                            <a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\article2.html">Article 2</a>
-                            <a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\article3.html" class="active">Article 3</a>
-                            <a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\mp3.html">Music Player</a>
-                        </div>
-                    </li>
-                    <li><a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\about.html">About</a></li>
-                    <li><a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\contact.html">Contact Us</a></li>
-                    <li><a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\login.html">Login</a></li>
-                </ul>
+                <img src="../logo.png" alt="Logo" style="height: 50px; vertical-align: middle;">
+                Ideas in Motion
             </div>
-        </nav>
-    
-
+            <ul class="nav-links">
+                <li><a href="../html/index.html">Home</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">Projects</a>
+                    <div class="dropdown-content">
+                        <a href="../html/article1.html">Article 1</a>
+                        <a href="../html/article2.html">Article 2</a>
+                        <a href="../html/article3.html" class="active">Article 3</a>
+                        <a href="../html/mp3.html">Music Player</a>
+                        <a href="/Final/html/story.html">Story of my Life</a>
+                    </div>
+                </li>
+                <li><a href="../html/about.html">About</a></li>
+                <li><a href="../html/contact.html">Contact Us</a></li>
+                <li><a href="../html/login.html">Login</a></li>
+            </ul>
+        </div>
+    </nav>
 
     <!-- Header -->
     <header class="header">
@@ -62,21 +62,21 @@
         <h3>Canteen Highlights</h3>
         <div class="gallery-container">
             <div class="image-item">
-                <img src="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\images3\counter.jpeg" alt="Food Counter">
+                <img src="../images3/counter.jpeg" alt="Food Counter">
                 <div class="image-caption">
                     <h4>Food Counter</h4>
                     <p>Choose from a variety of delicious options.</p>
                 </div>
             </div>
             <div class="image-item">
-                <img src="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\images3\dine.jpeg" alt="Dining Area">
+                <img src="../images3/dine.jpeg" alt="Dining Area">
                 <div class="image-caption">
                     <h4>Dining Area</h4>
                     <p>A comfortable space to enjoy your meal.</p>
                 </div>
             </div>
             <div class="image-item">
-                <img src="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\images3\throw.jpeg" alt="Trash Can">
+                <img src="../images3/throw.jpeg" alt="Trash Can">
                 <div class="image-caption">
                     <h4>Trash Can</h4>
                     <p>Keep the canteen clean by throwing your trash properly.</p>
