--- a/Final/html/mp3.html
+++ b/Final/html/mp3.html
@@ -4,36 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MP3 Player</title>
-    <link rel="stylesheet" href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\css\mp3.css">
+    <link rel="stylesheet" href="/Final/css/mp3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <!-- Navbar -->
     <nav class="navbar">
         <div class="container">
             <div class="logo">
-                <img src="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\logo.png" alt="Logo" style="height: 50px; vertical-align: middle;">
-                Ideas in Motion</div>
-                <ul class="nav-links">
-                    <li><a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\index.html" >Home</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropbtn">Projects</a>
-                        <div class="dropdown-content">
-                            <a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\article1.html">Article 1</a>
-                            <a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\article2.html">Article 2</a>
-                            <a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\article3.html">Article 3</a>
-                            <a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\mp3.html" class="active">Music Player</a>
-                        </div>
-                    </li>
-                    <li><a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\about.html">About</a></li>
-                    <li><a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\contact.html">Contact Us</a></li>
-                    <li><a href="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\html\login.html">Login</a></li>
-                </ul>
+                <img src="/Final/logo.png" alt="Logo" style="height: 50px; vertical-align: middle;">
+                Ideas in Motion
             </div>
-        </nav>
-    
+            <ul class="nav-links">
+                <li><a href="/Final/html/index.html">Home</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">Projects</a>
+                    <div class="dropdown-content">
+                        <a href="/Final/html/article1.html">Article 1</a>
+                        <a href="/Final/html/article2.html">Article 2</a>
+                        <a href="/Final/html/article3.html">Article 3</a>
+                        <a href="/Final/html/mp3.html" class="active">Music Player</a>
+                        <a href="/Final/html/story.html">Story of my Life</a>
+                    </div>
+                </li>
+                <li><a href="/Final/html/about.html">About</a></li>
+                <li><a href="/Final/html/contact.html">Contact Us</a></li>
+                <li><a href="/Final/html/login.html">Login</a></li>
+            </ul>
+        </div>
+    </nav>
 
-    <!-- Header -->
     <header class="header">
         <div class="header-overlay">
             <h1>MP3 Player</h1>
@@ -41,7 +40,6 @@
         </div>
     </header>
 
-    <!-- MP3 Player -->
     <div class="container">
         <div class="player">
             <div class="song-info">
@@ -52,30 +50,14 @@
                 </div>
             </div>
             <audio class="audio-player" autoplay>
-                <source src="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\Mp3\Every Summertime.mp3" 
-                type="audio/mpeg" data-title="Every Summertime" data-artist="Nikki" 
-                data-image="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\AlbumArt\everysummertime.jpeg">
-                <source src="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\Mp3\Everytime.mp3" 
-                type="audio/mpeg" data-title="Everytime" data-artist="Boy Pablo" 
-                data-image="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\AlbumArt\boypablo.jpeg">
-                <source src="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\Mp3\On Melancholy Hill.mp3" 
-                type="audio/mpeg" data-title="On Melancholy Hill" data-artist="Gorillaz" 
-                data-image="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\AlbumArt\onmelancholyhill.jpeg">
-                <source src="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\Mp3\Raining In Manila.mp3" 
-                type="audio/mpeg" data-title="Raining In Manila" data-artist="Lola Amour" 
-                data-image="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\AlbumArt\raininginmanila.jpeg">
-                <source src="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\Mp3\seasons.mp3" 
-                type="audio/mpeg" data-title="Seasons" data-artist="wave to earth" 
-                data-image="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\AlbumArt\seasons.jpeg">
-                <source src="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\Mp3\Vacation.mp3" 
-                type="audio/mpeg" data-title="Vacation" data-artist="Durdn" 
-                data-image="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\AlbumArt\vacation.jpeg">
-                <source src="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\Mp3\wtf.mp3" 
-                type="audio/mpeg" data-title="WTF" data-artist="Durdn" 
-                data-image="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\AlbumArt\boypablo.jpeg">
-                <source src="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\Mp3\Magnetic.mp3" 
-                type="audio/mpeg" data-title="Magnetic" data-artist="Illit" 
-                data-image="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\AlbumArt\magnetic.jpg">
+                <source src="/Final/Mp3/Every Summertime.mp3" type="audio/mpeg" data-title="Every Summertime" data-artist="Nikki" data-image="/Final/AlbumArt/everysummertime.jpeg">
+                <source src="/Final/Mp3/Everytime.mp3" type="audio/mpeg" data-title="Everytime" data-artist="Boy Pablo" data-image="/Final/AlbumArt/boypablo.jpeg">
+                <source src="/Final/Mp3/On Melancholy Hill.mp3" type="audio/mpeg" data-title="On Melancholy Hill" data-artist="Gorillaz" data-image="/Final/AlbumArt/onmelancholyhill.jpeg">
+                <source src="/Final/Mp3/Raining In Manila.mp3" type="audio/mpeg" data-title="Raining In Manila" data-artist="Lola Amour" data-image="/Final/AlbumArt/raininginmanila.jpeg">
+                <source src="/Final/Mp3/seasons.mp3" type="audio/mpeg" data-title="Seasons" data-artist="wave to earth" data-image="/Final/AlbumArt/seasons.jpeg">
+                <source src="/Final/Mp3/Vacation.mp3" type="audio/mpeg" data-title="Vacation" data-artist="Durdn" data-image="/Final/AlbumArt/vacation.jpeg">
+                <source src="/Final/Mp3/wtf.mp3" type="audio/mpeg" data-title="WTF" data-artist="Durdn" data-image="/Final/AlbumArt/boypablo.jpeg">
+                <source src="/Final/Mp3/Magnetic.mp3" type="audio/mpeg" data-title="Magnetic" data-artist="Illit" data-image="/Final/AlbumArt/magnetic.jpg">
                 Your browser does not support the audio element.
             </audio>
             <div class="progress-bar-wrapper">
@@ -90,12 +72,10 @@
                 <button class="play-pause-button"><i class="fas fa-play"></i></button>
                 <button class="next-button"><i class="fas fa-forward"></i></button>
             </div>
-            <!-- Song List -->
             <div class="song-list"></div>
         </div>
     </div>
 
-    <!-- Footer -->
     <footer class="footer">
         <p>&copy; 2024 Final Project. All rights reserved.</p>
         <div class="social-icons">
@@ -106,6 +86,6 @@
         </div>
     </footer>
 
-    <script src="C:\Users\Lenovo\Documents\Venz Files\Project\SDFinals\main.js"></script>
+    <script src="/Final/main.js"></script>
 </body>
 </html>
