--- a/html/article3.html
+++ b/html/article3.html
@@ -24,7 +24,7 @@
                         <a href="../html/article2.html">Article 2</a>
                         <a href="../html/article3.html" class="active">Article 3</a>
                         <a href="../html/mp3.html">Music Player</a>
-                        <a href="/Final/html/story.html">Story of my Life</a>
+                        <a href="/html/story.html">Story of my Life</a>
                     </div>
                 </li>
                 <li><a href="../html/about.html">About</a></li>
