--- a/html/about.html
+++ b/html/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link rel="stylesheet" href="/Final/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -12,24 +12,24 @@
     <nav class="navbar">
         <div class="container">
             <div class="logo">
-                <img src="/Final/hmpg/logo.png" alt="Logo" style="height: 50px; vertical-align: middle;">
+                <img src="/hmpg/logo.png" alt="Logo" style="height: 50px; vertical-align: middle;">
                 Ideas in Motion
             </div>
             <ul class="nav-links">
-                <li><a href="/Final/html/index.html">Home</a></li>
+                <li><a href="/html/index.html">Home</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Projects</a>
                     <div class="dropdown-content">
-                        <a href="/Final/html/article1.html">Article 1</a>
-                        <a href="/Final/html/article2.html">Article 2</a>
-                        <a href="/Final/html/article3.html">Article 3</a>
-                        <a href="/Final/html/mp3.html">Music Player</a>
-                        <a href="/Final/html/story.html">Story of my Life</a>
+                        <a href="/html/article1.html">Article 1</a>
+                        <a href="/html/article2.html">Article 2</a>
+                        <a href="/html/article3.html">Article 3</a>
+                        <a href="/html/mp3.html">Music Player</a>
+                        <a href="/html/story.html">Story of my Life</a>
                     </div>
                 </li>
-                <li><a href="/Final/html/about.html" class="active">About</a></li>
-                <li><a href="/Final/html/contact.html">Contact Us</a></li>
-                <li><a href="/Final/html/login.html">Login</a></li>
+                <li><a href="/html/about.html" class="active">About</a></li>
+                <li><a href="/html/contact.html">Contact Us</a></li>
+                <li><a href="/html/login.html">Login</a></li>
             </ul>
         </div>
     </nav>
@@ -48,7 +48,7 @@
             <div class="about-content">
                 <!-- Left: Image -->
                 <div class="about-image">
-                    <img src="/Final/hmpg/profile.jpg" alt="About Me" class="profile-pic">
+                    <img src="/hmpg/profile.jpg" alt="About Me" class="profile-pic">
                 </div>
                 <!-- Right: Text -->
                 <div class="about-text">
