--- a/html/article1.html
+++ b/html/article1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Final</title>
-    <link rel="stylesheet" href="/Final/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -12,24 +12,24 @@
    <nav class="navbar">
     <div class="container">
         <div class="logo">
-            <img src="/Final/hmpg/logo.png" alt="Logo" style="height: 50px; vertical-align: middle;">
+            <img src="/hmpg/logo.png" alt="Logo" style="height: 50px; vertical-align: middle;">
             Ideas in Motion
         </div>
         <ul class="nav-links">
-            <li><a href="/Final/html/index.html">Home</a></li>
+            <li><a href="/html/index.html">Home</a></li>
             <li class="dropdown">
                 <a href="#" class="dropbtn">Projects</a>
                 <div class="dropdown-content">
-                    <a href="/Final/html/article1.html" class="active">Article 1</a>
-                    <a href="/Final/html/article2.html">Article 2</a>
-                    <a href="/Final/html/article3.html">Article 3</a>
-                    <a href="/Final/html/mp3.html">Music Player</a>
-                    <a href="/Final/html/story.html">Story of my Life</a>
+                    <a href="/html/article1.html" class="active">Article 1</a>
+                    <a href="/html/article2.html">Article 2</a>
+                    <a href="/html/article3.html">Article 3</a>
+                    <a href="/html/mp3.html">Music Player</a>
+                    <a href="/html/story.html">Story of my Life</a>
                 </div>
             </li>
-            <li><a href="/Final/html/about.html">About</a></li>
-            <li><a href="/Final/html/contact.html">Contact Us</a></li>
-            <li><a href="/Final/html/login.html">Login</a></li>
+            <li><a href="/html/about.html">About</a></li>
+            <li><a href="/html/contact.html">Contact Us</a></li>
+            <li><a href="/html/login.html">Login</a></li>
         </ul>
     </div>
     </nav>
@@ -49,22 +49,22 @@
 
         <h3>1. Kadasig Gym</h3>
         <p>The name “Kadasig” is a Cebuano term, which may be translated as enthusiasm and courage...</p>
-        <img src="/Final/images1/kadasig.jpg" alt="Kadasig Gym">
+        <img src="/images1/kadasig.jpg" alt="Kadasig Gym">
         <div class="separator"></div>
 
         <h3>2. Sports & Socio-cultural Center</h3>
         <p>The center serves as a facility for sports and socio-cultural affairs...</p>
-        <img src="/Final/images1/cultural.jpg" alt="Sports & Socio-cultural Center">
+        <img src="/images1/cultural.jpg" alt="Sports & Socio-cultural Center">
         <div class="separator"></div>
 
         <h3>3. Ramon M. Durano Sr. Sports Memorial Sports Complex</h3>
         <p>It has a new 8-lane rubberized track built for university athletes...</p>
-        <img src="/Final/images1/oval.jpg" alt="Ramon M. Durano Sr. Sports Complex">
+        <img src="/images1/oval.jpg" alt="Ramon M. Durano Sr. Sports Complex">
         <div class="separator"></div>
 
         <h3>4. Tennis Court</h3>
         <p>CTU Danao Tennis Court caters to the general population...</p>
-        <img src="/Final/images1/tennis.jpg" alt="Tennis Court">
+        <img src="/images1/tennis.jpg" alt="Tennis Court">
     </section>
 
     <!-- Footer -->
