--- a/html/index.html
+++ b/html/index.html
@@ -4,30 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Final</title>
-    <link rel="stylesheet" href="/Final/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="container">
             <div class="logo">
-                <img src="/Final/logo.png" alt="Logo" style="height: 50px; vertical-align: middle;">
+                <img src="/logo.png" alt="Logo" style="height: 50px; vertical-align: middle;">
                 Ideas in Motion</div>
                 <ul class="nav-links">
-                    <li><a href="/Final/html/index.html" class="active">Home</a></li>
+                    <li><a href="/html/index.html" class="active">Home</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropbtn">Projects</a>
                         <div class="dropdown-content">
-                            <a href="/Final/html/article1.html">Article 1</a>
-                            <a href="/Final/html/article2.html">Article 2</a>
-                            <a href="/Final/html/article3.html">Article 3</a>
-                            <a href="/Final/html/mp3.html">Music Player</a>
-                            <a href="/Final/html/story.html">Story of my Life</a>
+                            <a href="/html/article1.html">Article 1</a>
+                            <a href="/html/article2.html">Article 2</a>
+                            <a href="/html/article3.html">Article 3</a>
+                            <a href="/html/mp3.html">Music Player</a>
+                            <a href="/html/story.html">Story of my Life</a>
                         </div>
                     </li>
-                    <li><a href="/Final/html/about.html">About</a></li>
-                    <li><a href="/Final/html/contact.html">Contact Us</a></li>
-                    <li><a href="/Final/html/login.html">Login</a></li>
+                    <li><a href="/html/about.html">About</a></li>
+                    <li><a href="/html/contact.html">Contact Us</a></li>
+                    <li><a href="/html/login.html">Login</a></li>
                 </ul>
             </div>
         </nav>
@@ -36,7 +36,7 @@
 <header class="header">
     <div class="header-overlay">
         <div class="header-logo">
-            <img src="/Final/logo.png" alt="Logo" style="height: 200px;">
+            <img src="/logo.png" alt="Logo" style="height: 200px;">
         </div>
         <h2>Ideas in Motion</h2>
         <p>Welcome to Ideas in Motion, a space where I document my work, ideas, and interests. From creative projects to personal insights, this blog is a curated collection of the things I’m passionate about. Take a look around—there’s always something new to explore.</p>
@@ -48,8 +48,8 @@
             <h3>--PROJECTS--</h3>
             <div class="gallery-container">
                 <div class="image-item">
-                    <a href="/Final/html/article1.html">
-                        <img src="/Final/hmpg/logo.png" alt="Article 1 Image">
+                    <a href="/html/article1.html">
+                        <img src="/hmpg/logo.png" alt="Article 1 Image">
                     </a>
                     <div class="image-caption">
                         <h4>CTU Sports Facilities</h4>
@@ -57,8 +57,8 @@
                     </div>
                 </div>
                 <div class="image-item">
-                    <a href="/Final/html/article2.html">
-                        <img src="/Final/hmpg/car.jpg" alt="Article 2 Image">
+                    <a href="/html/article2.html">
+                        <img src="/hmpg/car.jpg" alt="Article 2 Image">
                     </a>
                     <div class="image-caption">
                         <h4>Supercars</h4>
@@ -66,8 +66,8 @@
                     </div>
                 </div>
                 <div class="image-item">
-                    <a href="/Final/html/article3.html">
-                        <img src="/Final/hmpg/btr.jpeg" alt="Article 3 Image">
+                    <a href="/html/article3.html">
+                        <img src="/hmpg/btr.jpeg" alt="Article 3 Image">
                     </a>
                     <div class="image-caption">
                         <h4>CTU Bistro</h4>
@@ -75,8 +75,8 @@
                     </div>
                 </div>
                 <div class="image-item">
-                    <a href="/Final/html/mp3.html">
-                        <img src="/Final/hmpg/mp3icon.png" alt="Article 4 Image">
+                    <a href="/html/mp3.html">
+                        <img src="/hmpg/mp3icon.png" alt="Article 4 Image">
                     </a>
                     <div class="image-caption">
                         <h4>Music Player</h4>
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="image-item">
-                    <a href="/Final/html/story.html"> <img src="/Final/images1/oval.jg" alt="Story Image">
+                    <a href="/html/story.html"> <img src="/images1/oval.jg" alt="Story Image">
                     </a>
                     <div class="image-caption">
                         <h4>Story of My Life</h4>
