--- a/html/mp3.html
+++ b/html/mp3.html
@@ -4,31 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MP3 Player</title>
-    <link rel="stylesheet" href="/Final/css/mp3.css">
+    <link rel="stylesheet" href="/css/mp3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="container">
             <div class="logo">
-                <img src="/Final/logo.png" alt="Logo" style="height: 50px; vertical-align: middle;">
+                <img src="/logo.png" alt="Logo" style="height: 50px; vertical-align: middle;">
                 Ideas in Motion
             </div>
             <ul class="nav-links">
-                <li><a href="/Final/html/index.html">Home</a></li>
+                <li><a href="/html/index.html">Home</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Projects</a>
                     <div class="dropdown-content">
-                        <a href="/Final/html/article1.html">Article 1</a>
-                        <a href="/Final/html/article2.html">Article 2</a>
-                        <a href="/Final/html/article3.html">Article 3</a>
-                        <a href="/Final/html/mp3.html" class="active">Music Player</a>
-                        <a href="/Final/html/story.html">Story of my Life</a>
+                        <a href="/html/article1.html">Article 1</a>
+                        <a href="/html/article2.html">Article 2</a>
+                        <a href="/html/article3.html">Article 3</a>
+                        <a href="/html/mp3.html" class="active">Music Player</a>
+                        <a href="/html/story.html">Story of my Life</a>
                     </div>
                 </li>
-                <li><a href="/Final/html/about.html">About</a></li>
-                <li><a href="/Final/html/contact.html">Contact Us</a></li>
-                <li><a href="/Final/html/login.html">Login</a></li>
+                <li><a href="/html/about.html">About</a></li>
+                <li><a href="/html/contact.html">Contact Us</a></li>
+                <li><a href="/html/login.html">Login</a></li>
             </ul>
         </div>
     </nav>
@@ -50,14 +50,14 @@
                 </div>
             </div>
             <audio class="audio-player" autoplay>
-                <source src="/Final/Mp3/Every Summertime.mp3" type="audio/mpeg" data-title="Every Summertime" data-artist="Nikki" data-image="/Final/AlbumArt/everysummertime.jpeg">
-                <source src="/Final/Mp3/Everytime.mp3" type="audio/mpeg" data-title="Everytime" data-artist="Boy Pablo" data-image="/Final/AlbumArt/boypablo.jpeg">
-                <source src="/Final/Mp3/On Melancholy Hill.mp3" type="audio/mpeg" data-title="On Melancholy Hill" data-artist="Gorillaz" data-image="/Final/AlbumArt/onmelancholyhill.jpeg">
-                <source src="/Final/Mp3/Raining In Manila.mp3" type="audio/mpeg" data-title="Raining In Manila" data-artist="Lola Amour" data-image="/Final/AlbumArt/raininginmanila.jpeg">
-                <source src="/Final/Mp3/seasons.mp3" type="audio/mpeg" data-title="Seasons" data-artist="wave to earth" data-image="/Final/AlbumArt/seasons.jpeg">
-                <source src="/Final/Mp3/Vacation.mp3" type="audio/mpeg" data-title="Vacation" data-artist="Durdn" data-image="/Final/AlbumArt/vacation.jpeg">
-                <source src="/Final/Mp3/wtf.mp3" type="audio/mpeg" data-title="WTF" data-artist="Durdn" data-image="/Final/AlbumArt/boypablo.jpeg">
-                <source src="/Final/Mp3/Magnetic.mp3" type="audio/mpeg" data-title="Magnetic" data-artist="Illit" data-image="/Final/AlbumArt/magnetic.jpg">
+                <source src="/Mp3/Every Summertime.mp3" type="audio/mpeg" data-title="Every Summertime" data-artist="Nikki" data-image="/AlbumArt/everysummertime.jpeg">
+                <source src="/Mp3/Everytime.mp3" type="audio/mpeg" data-title="Everytime" data-artist="Boy Pablo" data-image="/AlbumArt/boypablo.jpeg">
+                <source src="/Mp3/On Melancholy Hill.mp3" type="audio/mpeg" data-title="On Melancholy Hill" data-artist="Gorillaz" data-image="/AlbumArt/onmelancholyhill.jpeg">
+                <source src="/Mp3/Raining In Manila.mp3" type="audio/mpeg" data-title="Raining In Manila" data-artist="Lola Amour" data-image="/AlbumArt/raininginmanila.jpeg">
+                <source src="/Mp3/seasons.mp3" type="audio/mpeg" data-title="Seasons" data-artist="wave to earth" data-image="/AlbumArt/seasons.jpeg">
+                <source src="/Mp3/Vacation.mp3" type="audio/mpeg" data-title="Vacation" data-artist="Durdn" data-image="/AlbumArt/vacation.jpeg">
+                <source src="/Mp3/wtf.mp3" type="audio/mpeg" data-title="WTF" data-artist="Durdn" data-image="/AlbumArt/boypablo.jpeg">
+                <source src="/Mp3/Magnetic.mp3" type="audio/mpeg" data-title="Magnetic" data-artist="Illit" data-image="/AlbumArt/magnetic.jpg">
                 Your browser does not support the audio element.
             </audio>
             <div class="progress-bar-wrapper">
@@ -86,6 +86,6 @@
         </div>
     </footer>
 
-    <script src="/Final/main.js"></script>
+    <script src="/main.js"></script>
 </body>
 </html>
