--- a/html/story.html
+++ b/html/story.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link rel="stylesheet" href="/Final/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
    <nav class="navbar">
     <div class="container">
         <div class="logo">
-            <img src="/Final/logo.png" alt="Logo" style="height: 50px; vertical-align: middle;">
+            <img src="/logo.png" alt="Logo" style="height: 50px; vertical-align: middle;">
             Ideas in Motion</div>
             <ul class="nav-links">
                 <li><a href="index.html" >Home</a></li>
@@ -23,7 +23,7 @@
                         <a href="article2.html">Article 2</a>
                         <a href="article3.html">Article 3</a>
                         <a href="/html/mp3.html">Music Player</a>
-                        <a href="/Final/html/story.html">Story of my Life</a>
+                        <a href="/html/story.html" class="active">Story of my Life</a>
                     </div>
                 </li>
                 <li><a href="/html/about.html">About</a></li>
